--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GeeksforGeeks Clone</title>
-  <link rel="stylesheet" href="project1.css" />
+  <link rel="stylesheet" href="p1.css" />
 </head>
 <body>
   <!-- Header -->
